--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,12 +5,11 @@
 
   <body>
 
+    <main class="mdl-layout__content">
 
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
+      {{ content }}
+
+    </main>
 
     <script src="{{ "/javascript/packery.pkgd.min.js" | prepend: site.baseurl }}"></script>
     <script src="{{ "/javascript/main.js" | prepend: site.baseurl }}"></script>
